Update 'yed3lp7xm-python' component image to: quay.io/rhtap_qe/rhtap-qe:94dbd0ffe3ba8267f366d1620996ab55d25f45cd@sha256:49ad9af176340a7c5b6da407602c51e62a405f6b12113d17d86a3262d3c87387

--- a/components/yed3lp7xm-python/overlays/development/deployment-patch.yaml
+++ b/components/yed3lp7xm-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: yed3lp7xm-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:94dbd0ffe3ba8267f366d1620996ab55d25f45cd@sha256:49ad9af176340a7c5b6da407602c51e62a405f6b12113d17d86a3262d3c87387
+          name: container-image
